--- a/src/components/grid/grid.scss
+++ b/src/components/grid/grid.scss
@@ -1,4 +1,12 @@
 .base-grid {
   position: relative;
   min-height: 100px;
+
+  .loader-inner {
+    margin-top: 20px;
+  }
+}
+
+.grid-retry {
+  float: right;
 }
