--- a/src/components/appMenu/appMenu.scss
+++ b/src/components/appMenu/appMenu.scss
@@ -5,6 +5,7 @@ a.dropdown-toggle {
 .navbar-brand.brand-image {
   width: 80px;
   background-image: url("/images/SHL_small.png");
-  background-position: center;
+  background-position: top;
+  background-size: 50px;
   background-repeat: no-repeat;
 }
