--- a/src/views/appMain/appMain.template.html
+++ b/src/views/appMain/appMain.template.html
@@ -20,7 +20,7 @@
   </div>
   <div class="col-md-8">
     <div class="panel panel-default">
-      <div class="panel-heading">Latest Transactions</div>
+      <div class="panel-heading">Latest Transactions, Injuries, and Suspensions</div>
       <div class="panel-body">
         <grid grid-options="$ctrl.gridOptions"></grid>
       </div>
