--- a/src/views/skaterRatings/skaterRatings.template.html
+++ b/src/views/skaterRatings/skaterRatings.template.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-default navbar-stacked">
   <div class="container">
     <div class="col-md-12">
-      <league-selector initial-league="$ctrl.skaterRatingsGridService.selectedLeague"
+      <league-selector show-unassigned="true"
+        initial-league="$ctrl.skaterRatingsGridService.selectedLeague"
         on-change="$ctrl.leagueUpdated(league)"></league-selector>
     </div>
   </div>
