--- a/src/components/appMenu/appMenu.scss
+++ b/src/components/appMenu/appMenu.scss
@@ -4,7 +4,7 @@ a.dropdown-toggle {
 
 .navbar-brand.brand-image {
   width: 80px;
-  background-image: url("/images/SHL_small.png");
+  background-image: url("/images/SHL_small.png?version=1.0");
   background-position: top;
   background-size: 50px;
   background-repeat: no-repeat;
