--- a/src/components/scoreCard/scoreCard.scss
+++ b/src/components/scoreCard/scoreCard.scss
@@ -1,22 +1,20 @@
 .score-card-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-
-  @media (min-width: 992px) {
-    flex-direction: column;
-  }
+  flex-wrap: nowrap;
+  overflow-x: auto;
 
   score-card {
-    @media (max-width: 991px) {
-      width: 33%;
-      padding: 2px;
-      min-width: 150px;
-    }
+    width: 160px;
+    margin-left: 2px;
+    margin-right: 2px;
+    flex-shrink: 0;
+    flex-grow: 0;
 
     .score-card {
       font-size: 12px;
+      padding: 4px 8px;
+      margin-bottom: 10px;
 
       .score-card-date {
         font-weight: 700;
