--- a/src/views/skaterInfo/skaterInfo.scss
+++ b/src/views/skaterInfo/skaterInfo.scss
@@ -6,3 +6,14 @@
     margin-bottom: 0;
   }
 }
+
+.skater-info-full {
+  .skater-info-group {
+    margin-right: 20px;
+    white-space: nowrap;
+
+    span {
+      float: right;
+    }
+  }
+}
