--- a/src/views/skaterInfo/skaterInfo.template.html
+++ b/src/views/skaterInfo/skaterInfo.template.html
@@ -17,8 +17,9 @@
               <span ng-bind="$ctrl.skaterInfo.Age"></span>
             </div>
             <div class="skater-info-group">
-              <label>Condition: </label>
-              <span ng-bind="$ctrl.skaterInfo.Condition"></span>
+              <label>Salary: </label>
+              <span ng-if="$ctrl.skaterInfo.Salary1" ng-bind="$ctrl.skaterInfo.Salary1 | currency : '$' : 0"></span>
+              <span ng-if="!$ctrl.skaterInfo.Salary1">N/A</span>
             </div>
           </div>
           <div class="col-xs-6">
@@ -29,10 +30,6 @@
             <div class="skater-info-group">
               <label>Height: </label>
               <span ng-bind="$ctrl.skaterInfo.Height | height"></span>
-            </div>
-            <div class="skater-info-group">
-              <label>Overall: </label>
-              <span ng-bind="$ctrl.skaterInfo.Overall"></span>
             </div>
           </div>
         </div>
@@ -48,6 +45,9 @@
         <li ng-class="{ active: $ctrl.page === 'PlayerInfo' }">
           <a ng-click="$ctrl.page = 'PlayerInfo'">Player Info</a>
         </li>
+        <li ng-class="{ active: $ctrl.page === 'Compare' }">
+          <a ng-click="$ctrl.page = 'Compare'">Compare</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -57,51 +57,98 @@
   <div class="col-md-12">
     <div class="panel panel-default" ng-show="$ctrl.page === 'PlayerInfo'">
       <div class="panel-heading">Player Info</div>
-      <div class="panel-body">
-        <div class="table-responsive">
-          <table class="table table-condensed">
-            <thead>
-              <th title="Checking">CK</th>
-              <th title="Fighting">FG</th>
-              <th title="Discipline">DI</th>
-              <th title="Skating">SK</th>
-              <th title="Strength">ST</th>
-              <th title="Endurance">EN</th>
-              <th title="Durability">DU</th>
-              <th title="Puck Handling">PH</th>
-              <th title="Faceoffs">FO</th>
-              <th title="Passing">PA</th>
-              <th title="Scoring">SC</th>
-              <th title="Defense">DF</th>
-              <th title="Penalty Shot">PS</th>
-              <th title="Experience">EX</th>
-              <th title="Leadership">LD</th>
-              <th title="Potential">PO</th>
-              <th title="Morale">MO</th>
-            </thead>
-            <tbody>
-              <tr>
-                <td><span ng-bind="$ctrl.skaterInfo.CK"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.FG"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.DI"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.SK"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.ST"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.EN"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.DU"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.PH"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.FO"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.PA"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.SC"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.DF"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.PS"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.EX"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.LD"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.PO"></span></td>
-                <td><span ng-bind="$ctrl.skaterInfo.MO"></span></td>
-              </tr>
-            </tbody>
-          </table>
+      <div class="panel-body skater-info-full">
+        <div class="col-xs-6 col-sm-3">
+          <div class="skater-info-group">
+            <label>Scoring</label>
+            <span ng-bind="$ctrl.skaterInfo.SC"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Puck Handling</label>
+            <span ng-bind="$ctrl.skaterInfo.PH"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Faceoffs</label>
+            <span ng-bind="$ctrl.skaterInfo.FO"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Passing</label>
+            <span ng-bind="$ctrl.skaterInfo.PA"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Penalty Shot</label>
+            <span ng-bind="$ctrl.skaterInfo.PS"></span>
+          </div>
         </div>
+        <div class="col-xs-6 col-sm-3">
+          <div class="skater-info-group">
+            <label>Skating</label>
+            <span ng-bind="$ctrl.skaterInfo.SK"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Endurance</label>
+            <span ng-bind="$ctrl.skaterInfo.EN"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Durability</label>
+            <span ng-bind="$ctrl.skaterInfo.DU"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Defense</label>
+            <span ng-bind="$ctrl.skaterInfo.DF"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Leadership</label>
+            <span ng-bind="$ctrl.skaterInfo.LD"></span>
+          </div>
+        </div>
+        <div class="col-xs-6 col-sm-3">
+          <div class="skater-info-group">
+            <label>Checking</label>
+            <span ng-bind="$ctrl.skaterInfo.CK"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Fighting</label>
+            <span ng-bind="$ctrl.skaterInfo.FG"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Discipline</label>
+            <span ng-bind="$ctrl.skaterInfo.DI"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Strength</label>
+            <span ng-bind="$ctrl.skaterInfo.ST"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Experience</label>
+            <span ng-bind="$ctrl.skaterInfo.EX"></span>
+          </div>
+        </div>
+        <div class="col-xs-6 col-sm-3">
+          <div class="skater-info-group">
+            <label>Overall</label>
+            <span ng-bind="$ctrl.skaterInfo.Overall"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Potential</label>
+            <span ng-bind="$ctrl.skaterInfo.PO"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Condition</label>
+            <span ng-bind="$ctrl.skaterInfo.Condition"></span>
+          </div>
+          <div class="skater-info-group">
+            <label>Morale</label>
+            <span ng-bind="$ctrl.skaterInfo.MO"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-default" ng-show="$ctrl.page === 'Compare'">
+      <div class="panel-heading">Compare</div>
+      <div class="panel-body">
+        <skater-compare player="$ctrl.skaterInfo"></skater-compare>
       </div>
     </div>
   </div>
